--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,10 +8,11 @@
   </head>
   <body>
     <%- include("./partials/nav") %>
+    <div class="border border-2 position-absolute top-50 start-50 translate-middle">
       <form
         action="/users/signup"
         method="post"
-        class="form col-md-3 border border-2 position-absolute top-50 start-50 translate-middle d-flex flex-column gap-3 px-4 py-3"
+        class="d-flex flex-column gap-3 px-4 py-3"
       >
         <div class="">
           <h1 class="text-center fs-2 text-muted">Sign Up</h1>
@@ -67,6 +68,7 @@
           </p>
         </div>
       </form>
+    </div>
     </div>
     <%- include("./partials/script") %>
   </body>
